removed "Get Video Playlist" on Analysis page and fixed alignment of 3 buttons

--- a/css/gat_front.css
+++ b/css/gat_front.css
@@ -239,14 +239,14 @@ label.meter
     width:32%;
 }
 .gat_twobuttons > li {
-    width: 33%;
+    width: 49.7%;
 }
-.gat_twobuttons li:nth-child(3) {
+.gat_twobuttons li:nth-child(2) {
     text-align:right !important;
 }
 .gat_thirddomain li:nth-child(2),
 .gat_thirddomain li:nth-child(3){
-    width:18%;
+    width:33%;
 }
 .gat_domainsbmt_btn li .gat_buttton {
     float: none !important;
@@ -270,12 +270,12 @@ label.meter
     width:35%;
     text-align:right;
 }
-.gat_thirddomain li:nth-child(2),
-.gat_thirddomain li:nth-child(3){
-    width:18%;
+.gat_thirddomain li:nth-child(1),
+.gat_thirddomain li:nth-child(2){
+    width:24.5%;
 }
-.gat_thirddomain li:nth-child(1) {
-    width:20%;
+.gat_thirddomain li:nth-child(3) {
+    width:50%;
 }
 .gat_thirddomain li:nth-child(4) {
     width:42.5%;
